@@ -83,6 +83,19 @@ argument_list|(
 literal|3
 argument_list|)
 decl_stmt|;
+DECL|field|LOAD_FOR_MERGE
+specifier|public
+specifier|static
+specifier|final
+name|FieldSelectorResult
+name|LOAD_FOR_MERGE
+init|=
+operator|new
+name|FieldSelectorResult
+argument_list|(
+literal|4
+argument_list|)
+decl_stmt|;
 DECL|field|id
 specifier|private
 name|int
