@@ -18,48 +18,6 @@ end_comment
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|document
-operator|.
-name|*
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|Directory
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|IndexInput
-import|;
-end_import
-
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -109,6 +67,118 @@ operator|.
 name|zip
 operator|.
 name|Inflater
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|AbstractField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Document
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Field
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|FieldSelector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|FieldSelectorResult
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Fieldable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|IndexInput
 import|;
 end_import
 
@@ -451,6 +521,35 @@ literal|true
 condition|)
 block|{
 name|addField
+argument_list|(
+name|doc
+argument_list|,
+name|fi
+argument_list|,
+name|binary
+argument_list|,
+name|compressed
+argument_list|,
+name|tokenize
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|acceptField
+operator|.
+name|equals
+argument_list|(
+name|FieldSelectorResult
+operator|.
+name|LOAD_FOR_MERGE
+argument_list|)
+operator|==
+literal|true
+condition|)
+block|{
+name|addFieldForMerge
 argument_list|(
 name|doc
 argument_list|,
@@ -873,6 +972,107 @@ name|f
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+comment|// in merge mode we don't uncompress the data of a compressed field
+DECL|method|addFieldForMerge
+specifier|private
+name|void
+name|addFieldForMerge
+parameter_list|(
+name|Document
+name|doc
+parameter_list|,
+name|FieldInfo
+name|fi
+parameter_list|,
+name|boolean
+name|binary
+parameter_list|,
+name|boolean
+name|compressed
+parameter_list|,
+name|boolean
+name|tokenize
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Object
+name|data
+decl_stmt|;
+if|if
+condition|(
+name|binary
+operator|||
+name|compressed
+condition|)
+block|{
+name|int
+name|toRead
+init|=
+name|fieldsStream
+operator|.
+name|readVInt
+argument_list|()
+decl_stmt|;
+specifier|final
+name|byte
+index|[]
+name|b
+init|=
+operator|new
+name|byte
+index|[
+name|toRead
+index|]
+decl_stmt|;
+name|fieldsStream
+operator|.
+name|readBytes
+argument_list|(
+name|b
+argument_list|,
+literal|0
+argument_list|,
+name|b
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|data
+operator|=
+name|b
+expr_stmt|;
+block|}
+else|else
+block|{
+name|data
+operator|=
+name|fieldsStream
+operator|.
+name|readString
+argument_list|()
+expr_stmt|;
+block|}
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|FieldForMerge
+argument_list|(
+name|data
+argument_list|,
+name|fi
+argument_list|,
+name|binary
+argument_list|,
+name|compressed
+argument_list|,
+name|tokenize
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|addField
 specifier|private
@@ -1936,6 +2136,162 @@ operator|.
 name|toByteArray
 argument_list|()
 return|;
+block|}
+comment|// Instances of this class hold field properties and data
+comment|// for merge
+DECL|class|FieldForMerge
+specifier|final
+specifier|static
+class|class
+name|FieldForMerge
+extends|extends
+name|AbstractField
+block|{
+DECL|method|stringValue
+specifier|public
+name|String
+name|stringValue
+parameter_list|()
+block|{
+return|return
+operator|(
+name|String
+operator|)
+name|this
+operator|.
+name|fieldsData
+return|;
+block|}
+DECL|method|readerValue
+specifier|public
+name|Reader
+name|readerValue
+parameter_list|()
+block|{
+comment|// not needed for merge
+return|return
+literal|null
+return|;
+block|}
+DECL|method|binaryValue
+specifier|public
+name|byte
+index|[]
+name|binaryValue
+parameter_list|()
+block|{
+return|return
+operator|(
+name|byte
+index|[]
+operator|)
+name|this
+operator|.
+name|fieldsData
+return|;
+block|}
+DECL|method|FieldForMerge
+specifier|public
+name|FieldForMerge
+parameter_list|(
+name|Object
+name|value
+parameter_list|,
+name|FieldInfo
+name|fi
+parameter_list|,
+name|boolean
+name|binary
+parameter_list|,
+name|boolean
+name|compressed
+parameter_list|,
+name|boolean
+name|tokenize
+parameter_list|)
+block|{
+name|this
+operator|.
+name|isStored
+operator|=
+literal|true
+expr_stmt|;
+name|this
+operator|.
+name|fieldsData
+operator|=
+name|value
+expr_stmt|;
+name|this
+operator|.
+name|isCompressed
+operator|=
+name|compressed
+expr_stmt|;
+name|this
+operator|.
+name|isBinary
+operator|=
+name|binary
+expr_stmt|;
+name|this
+operator|.
+name|isTokenized
+operator|=
+name|tokenize
+expr_stmt|;
+name|this
+operator|.
+name|name
+operator|=
+name|fi
+operator|.
+name|name
+operator|.
+name|intern
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|isIndexed
+operator|=
+name|fi
+operator|.
+name|isIndexed
+expr_stmt|;
+name|this
+operator|.
+name|omitNorms
+operator|=
+name|fi
+operator|.
+name|omitNorms
+expr_stmt|;
+name|this
+operator|.
+name|storeOffsetWithTermVector
+operator|=
+name|fi
+operator|.
+name|storeOffsetWithTermVector
+expr_stmt|;
+name|this
+operator|.
+name|storePositionWithTermVector
+operator|=
+name|fi
+operator|.
+name|storePositionWithTermVector
+expr_stmt|;
+name|this
+operator|.
+name|storeTermVector
+operator|=
+name|fi
+operator|.
+name|storeTermVector
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
