@@ -64,6 +64,34 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|document
+operator|.
+name|FieldSelector
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|FieldSelectorResult
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|store
 operator|.
 name|Directory
@@ -828,6 +856,31 @@ argument_list|,
 name|fieldInfos
 argument_list|)
 decl_stmt|;
+comment|// for merging we don't want to compress/uncompress the data, so to tell the FieldsReader that we're
+comment|// in  merge mode, we use this FieldSelector
+name|FieldSelector
+name|fieldSelectorMerge
+init|=
+operator|new
+name|FieldSelector
+argument_list|()
+block|{
+specifier|public
+name|FieldSelectorResult
+name|accept
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+return|return
+name|FieldSelectorResult
+operator|.
+name|LOAD_FOR_MERGE
+return|;
+block|}
+block|}
+decl_stmt|;
 try|try
 block|{
 for|for
@@ -904,6 +957,8 @@ operator|.
 name|document
 argument_list|(
 name|j
+argument_list|,
+name|fieldSelectorMerge
 argument_list|)
 argument_list|)
 expr_stmt|;
